2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c:
	(clutter_set_motion_events_frequency): Never allow the motion
	events devlivery frequency to exceed the default frame rate.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/json/json-parser.[ch]: Use gssize, size we allow -1
	as a length (meaning "use the whole string").

	(json_parser_load_from_data): Use the passed length instead of
	using strlen() all the time.

	* clutter/clutter-script.[ch]: Ditto as above.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/pango/pangoclutter-render.c: Hush a compiler warning
	by removing a unused variable.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c (clutter_label_ensure_layout): If the
	label has a requested size, force it when ensuring the layout.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-unproject.c: Fix type comparison.

	* tests/test-score.c: Save the returned ids.

2007-12-05  Matthew Allum  <mallum@openedhand.com>

	reviewed by: <delete if not using a buddy>

	* clutter/pango/pangoclutter-render.c: (tc_get), (free_glyph_info),
	(draw_glyph), (draw_trapezoid), (pango_clutter_render_layout),
	(pango_clutter_render_layout_line),
	(pango_clutter_render_clear_caches), (prepare_run), (draw_begin):

2007-12-05  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.h: Rearrange declarations.

	* clutter/clutter-score.c: More documentation in the long
	description of the ClutterScore section.

	* clutter/clutter-debug.h:
	* clutter/clutter-main.c: Add the CLUTTER_DEBUG_SHADER flag,
	for debugging the shader calls.

	* clutter/clutter-feature.h: Fix the documentation of the
	feature flags.

	* clutter/Makefile.am: Remove trailing whitespace.

2007-12-05  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* tests/Makefile.am:
	* tests/test-unproject:
	(clutter_actor_transform_stage_point):